Added functionality for changing the planting and flowering dates. Modified all plant listing tile description to include flower week if there is one. Formalised the delete plant and delete all plants functionality within the PlantTracker class. Changed date formats to be shorter and not include the time. Moved dialog functionality into their own methods. Fixed some bugs in the display of day and week counts. Modified individual plant layout to be a little cleaner and fix the shortened labels. Added change date dialog for changing planting and flowering dates. Added delete all plants confirmation dialog. Added rename plant dialog. Added plant specific menu options into the ellipsis menu for modifying plant information.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_delete">Delete Plant</string>
+    <string name="action_delete_really">Confirm Delete Plant</string>
+    <string name="action_rename">Rename Plant</string>
+    <string name="action_change_start_date">Change Plant Date</string>
+    <string name="action_change_flower_date">Change Flower Date</string>
 </resources>
