--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -9,4 +9,18 @@
     <string name="action_rename">Rename Plant</string>
     <string name="action_change_start_date">Change Plant Date</string>
     <string name="action_change_flower_date">Change Flower Date</string>
+    <string name="record_not_found">Record not found</string>
+    <string name="seed">Seed</string>
+    <string name="clone">Clone</string>
+
+    <string-array name="plant_event_options">
+        <item>Add Event</item>
+        <item>Observe</item>
+        <item>Water</item>
+        <item>Feed</item>
+        <item>Trim</item>
+        <item>Top</item>
+        <item>Repot</item>
+        <item>New Event...</item>
+    </string-array>
 </resources>
