Additional interface cleanup. Implemented state changes. Implemented recordable event sorting in preparation for making recordable events editable. Implemented the time/date change tabs. Fixed the individual plant view to show the newly calculated state day/week values. Fixed some bugs.

--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -15,12 +15,13 @@
 
     <string-array name="plant_event_options">
         <item>Add Event</item>
-        <item>Observe</item>
-        <item>Water</item>
+        <item>Change State</item>
         <item>Feed</item>
-        <item>Trim</item>
-        <item>Top</item>
+        <item>Observe</item>
         <item>Repot</item>
+        <item>Top</item>
+        <item>Trim</item>
+        <item>Water</item>
         <item>New Event...</item>
     </string-array>
 </resources>
