Added activity to view all images for a plant when clicking on the plant thumbnail in the individual plant view. Fixed minor UI bugs.

--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="camera_error">There was an error with the camera.</string>
     <string name="intro_message">Intro message here?.</string>
 
+    <string name="set_phase">[ Set ]</string>
 
     <string-array name="plant_event_options">
         <item>Add Event</item>
