--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -46,6 +46,15 @@
     <string name="camera_error">There was an error with the camera.</string>
     <string name="intro_message">Intro message here?.</string>
 
+    <string name="grow_week">Grow Wk.</string>
+    <string name="grow_day">Grow Day</string>
+    <string name="grow_phase">Phase</string>
+    <string name="phase_week">Phase Wk.</string>
+    <string name="phase_day">Phase Day</string>
+
+    <string name="add_new_record">Add new record...</string>
+
+
     <string name="set_phase">[ Set ]</string>
 
     <string-array name="plant_event_options">
