UI tweaks Added some padding to the add new record spinner and moved it back into its original location. Added default colors for each of the default record template types. Removed black background and curved corner border for plant thumbnail.

--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="phase_week">Phase Wk.</string>
     <string name="phase_day">Phase Day</string>
 
-    <string name="add_new_record">Add new record...</string>
+    <string name="add_new_record">-- Add new record --</string>
 
 
     <string name="set_phase">[ Set ]</string>
