--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="drawer_item_all">Plants: All</string>
     <string name="drawer_item_record_templates">Record Templates</string>
     <string name="drawer_item_groups">Groups</string>
+    <string name="drawer_item_backup">Backup</string>
     <string name="drawer_item_export">Export</string>
     <string name="drawer_item_import">Import</string>
     <string name="drawer_item_delete_all_plants">Delete All Plants</string>
@@ -48,10 +49,10 @@
     <string name="intro_message">Intro message here?.</string>
 
     <string name="grow_week">Grow Wk.</string>
-    <string name="grow_day">Grow Day</string>
+    <string name="grow_day">Day</string>
     <string name="grow_phase">Phase</string>
-    <string name="phase_week">Phase Wk.</string>
-    <string name="phase_day">Phase Day</string>
+    <string name="phase_week">Phase Wk</string>
+    <string name="phase_day">Day</string>
 
     <string name="add_new_record">-- Add new record --</string>
 
