Fixed coloring and shadows. Added shading behind the text over the image preview for contrast on bright pictures. Changed coloring for parent plant name's link to the plant. Changed color for links to a chartreuse.

--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="add_new_record">-- Add new record --</string>
 
 
-    <string name="set_phase">[ Set ]</string>
+    <string name="set_phase">[ Set Phase ]</string>
 
     <string-array name="plant_event_options">
         <item>Add Event</item>
