--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -70,4 +70,12 @@
         <item>Water</item>
         <item>New Event...</item>
     </string-array>
+
+    <string name="dialog_text">PlantTracker has stopped. Would you like to send a crash report so we
+        can fix it? The crash report does not contain any personally identifying information and
+        will be sent in an email to the crash report inbox. Why email, you might ask? Because it is
+        free =)
+    </string>
+    <string name="dialog_comment">Comments (optional) are included within the stacktrace</string>
+
 </resources>
