Added context menu for groups and cleaned up the Plant class. Group management needed a context menu so you could rename, in addition to delete a group. The Plant class in the tracker impl had some overgrowth that needed trimming.

--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -87,5 +87,8 @@
         free =)
     </string>
     <string name="dialog_comment">Comments (optional) are included within the stacktrace</string>
+    <string name="manage_groups">Manage Groups</string>
+    <string name="rename_group">Rename Group</string>
+    <string name="delete_group">Delete Group</string>
 
 </resources>
