--- a/plant_tracker/src/main/res/values/strings.xml
+++ b/plant_tracker/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Plant Tracker</string>
-    <string name="app_copyright">Copyright 2017 - 2108</string>
+    <string name="app_copyright">Copyright 2017 - 2019</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -26,7 +26,8 @@
     <string name="drawer_item_all">Plants: All</string>
     <string name="drawer_item_record_templates">Record Templates</string>
     <string name="drawer_item_groups">Groups</string>
-    <string name="drawer_item_backup">Backup</string>
+    <string name="drawer_item_sync">Sync with PrivateStash</string>
+    <string name="drawer_item_sync_settings">Sync Settings...</string>
     <string name="drawer_item_export">Export</string>
     <string name="drawer_item_import">Import</string>
     <string name="drawer_item_delete_all_plants">Delete All Plants</string>
